...
            );
            context.pop();
          },
        ),
        actions: [
          TextButton(
            key: const Key("saveButton"),
            onPressed: () async {
              AppLogger.d("Save action.id: ${action.id}");

              action.text = textController.text;
              try {
                await ref.read(actionStateProvider.notifier).addOrEditAction(
...
